--- a/index.html
+++ b/index.html
@@ -8,27 +8,19 @@
     body {
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
-      margin: 0;
-      padding: 0;
+      color: #333;
     }
     header {
-      background: #333;
-      color: #fff;
+      background-color: #333;
+      color: white;
       text-align: center;
       padding: 20px;
     }
-    header h1 {
-      margin: 0;
+    h1 {
+      font-size: 36px;
     }
     section {
       padding: 20px;
-      margin: 20px;
-    }
-    footer {
-      background: #333;
-      color: #fff;
-      text-align: center;
-      padding: 10px;
     }
   </style>
 </head>
@@ -40,14 +32,14 @@
 
   <section>
     <h2>About Me</h2>
-    <p>Hello! I’m **Naveenpaul Kolli**, a second-semester student in **Computer Information Science** with a focus on **AI** at **Indiana Wesleyan University (IWU)**. My passion lies in AI/ML, and I have developed a **Netflix login page** using Python and a **tourism interface** using **UI/UX design** principles.</p>
+    <p>I'm **Naveenpaul Kolli**, currently studying **Computer Information Science** at **IWU**. I’m passionate about AI/ML and have worked on a **Netflix login page** using **Python** and a **Tourism interface** using **UI/UX design** principles.</p>
   </section>
 
   <section>
-    <h2>Projects</h2>
+    <h2>My Projects</h2>
     <ul>
-      <li><strong>Netflix Login Page</strong>: Created using Python to practice backend development.</li>
-      <li><strong>Tourism Interface</strong>: Designed a UI/UX interface for tourism apps, showcasing my design skills.</li>
+      <li><strong>Netflix Login Page</strong>: Built using Python for backend development.</li>
+      <li><strong>Tourism Interface</strong>: Designed a UI/UX for tourism apps.</li>
     </ul>
   </section>
 
