--- a/index.html
+++ b/index.html
@@ -3,24 +3,44 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Naveenpaul Kolli - Portfolio</title>
+  <title>Naveenpaul Kolli - AI/ML Portfolio</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       background-color: #f4f4f4;
+      margin: 0;
+      padding: 0;
       color: #333;
     }
     header {
-      background-color: #333;
+      background-color: #444;
       color: white;
       text-align: center;
-      padding: 20px;
+      padding: 30px;
     }
-    h1 {
-      font-size: 36px;
+    header h1 {
+      margin: 0;
     }
     section {
       padding: 20px;
+      margin: 20px;
+    }
+    footer {
+      background-color: #444;
+      color: white;
+      text-align: center;
+      padding: 15px;
+    }
+    .timeline {
+      list-style-type: none;
+      padding: 0;
+    }
+    .timeline li {
+      padding: 10px;
+      margin: 10px 0;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     }
   </style>
 </head>
@@ -31,15 +51,18 @@
   </header>
 
   <section>
-    <h2>About Me</h2>
-    <p>I'm **Naveenpaul Kolli**, currently studying **Computer Information Science** at **IWU**. I’m passionate about AI/ML and have worked on a **Netflix login page** using **Python** and a **Tourism interface** using **UI/UX design** principles.</p>
-  </section>
-
-  <section>
-    <h2>My Projects</h2>
-    <ul>
-      <li><strong>Netflix Login Page</strong>: Built using Python for backend development.</li>
-      <li><strong>Tourism Interface</strong>: Designed a UI/UX for tourism apps.</li>
+    <h2>AI and ML Timeline</h2>
+    <p>This timeline highlights the significant milestones in the **AI** and **ML** fields, demonstrating my understanding of AI/ML history and how these milestones impact modern technology.</p>
+    
+    <ul class="timeline">
+      <li><strong>1956</strong> - The term "Artificial Intelligence" was coined by John McCarthy during the **Dartmouth Conference**.</li>
+      <li><strong>1960s</strong> - **ELIZA**, one of the first chatbot programs, was created by Joseph Weizenbaum at MIT.</li>
+      <li><strong>1980s</strong> - **Backpropagation** became widely used for training neural networks.</li>
+      <li><strong>1997</strong> - IBM’s **Deep Blue** defeated chess champion Garry Kasparov, marking a major milestone in AI and game-playing algorithms.</li>
+      <li><strong>2006</strong> - The concept of **Deep Learning** became popular, leading to breakthroughs in AI/ML applications.</li>
+      <li><strong>2012</strong> - **AlexNet** revolutionized the field of computer vision by achieving remarkable results in the **ImageNet competition**.</li>
+      <li><strong>2019</strong> - OpenAI's **GPT-2** model showcased significant advancements in natural language processing.</li>
+      <li><strong>2020</strong> - **GPT-3** (the model behind tools like ChatGPT) was released, showcasing massive improvements in language generation and understanding.</li>
     </ul>
   </section>
 
