--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
       <li><strong>2020</strong> - **GPT-3** (the model behind tools like ChatGPT) was released, showcasing massive improvements in language generation and understanding.</li>
     </ul>
   </section>
+<section>
+  <h2>Reflection on AI/ML Timeline</h2>
+  <p>This timeline highlights the significant milestones in **AI** and **ML**, demonstrating my understanding of **AI/ML history** and how these milestones impact modern technology. Through creating this artifact, I was able to deepen my understanding of the **evolution of AI** and its real-world applications. Reflecting on these milestones helped me identify areas I want to improve, particularly in terms of staying up-to-date with AI's current trends. I believe this artifact showcases my ability to understand AI/ML history, which is a core skill for any professional in this field. It also shows my **commitment to continuous learning**, which I believe is crucial for my career growth in AI/ML.</p>
+</section>
 
   <footer>
     <p>&copy; 2025 Naveenpaul Kolli. All rights reserved.</p>
